update account details
