# api/openapi.yaml
@@ -280,16 +280,27 @@ paths:
           description: The user is deleted successfully.
         "404":
           $ref: "#/components/responses/404NotFound"
+  /api/v1/account/:
+    put:
+      tags:
+        - account
+      summary: User update account details.
+      security:
+        - bearerAuth: []
+      operationId: updateUserAccount
+      requestBody:
+        $ref: "#/components/requestBodies/updateAccountInput"
+      responses:
+        "200":
+          description: Account updated successfully.
   /api/v1/account/updatePassword:
     patch:
       tags:
-        - users
-      summary: Update user password by user ID.
+        - account
+      summary: User update account password.
       security:
         - bearerAuth: []
-      operationId: updateUserPasswordById
-      parameters:
-        - $ref: "#/components/parameters/userIdParam"
+      operationId: updateUserPassword
       requestBody:
         $ref: "#/components/requestBodies/updatePasswordInput"
       responses:
@@ -467,20 +478,14 @@ components:
       description: 'A string containing any combination of the roles "teacher", "student", "admin", and "sensor", separated by commas.'
       pattern: "^((teacher|student|admin|sensor)(,(teacher|student|admin|sensor))*)?$"
       x-internal: true
-    User:
+    Account:
       type: object
+      description: User account updatable fields
       required:
-        - emailAddress
         - firstName
         - lastName
         - phone
-        - role
-        - status
       properties:
-        _id:
-          $ref: "#/components/schemas/UniqueId"
-        emailAddress:
-          $ref: "#/components/schemas/Email"
         firstName:
           type: string
           minLength: 2
@@ -495,45 +500,58 @@ components:
           type: string
           pattern: "^0[2-478]\\d{8}$"
           description: "Phone number must be 10 digits without spaces and special charachters"
-        role:
-          type: array
-          minItems: 1
-          uniqueItems: true
-          description: 'Exaustive combination of array of user roles ["teacher", "student", "admin", "sensor"]'
-          items:
-            type: string
-            enum:
-              - teacher
-              - student
-              - admin
-              - sensor
-            description: 'Each role must be one of "teacher", "student", "admin", or "sensor".'
-        status:
-          type: string
-          enum:
-            - active
-            - inactive
-          description: 'Status must be either "active" or "inactive".'
-        createdAt:
-          type: string
-          format: date-time
-          readOnly: true
-          description: "Date when the user was created."
-        updatedAt:
-          type: string
-          format: date-time
-          readOnly: true
-          description: "Date when the user was last updated."
-        passwordChangedAt:
-          type: string
-          format: date-time
-          readOnly: true
-          description: "Date when the user's password was last updated."
-        lastLoggedInAt:
-          type: string
-          format: date-time
-          readOnly: true
-          description: "Date when the user last logged in."
+    User:
+      allOf:
+        - $ref: "#/components/schemas/Account"
+        - type: object
+          required:
+            - emailAddress
+            - role
+            - status
+          properties:
+            _id:
+              $ref: "#/components/schemas/UniqueId"
+            emailAddress:
+              $ref: "#/components/schemas/Email"
+            role:
+              type: array
+              minItems: 1
+              uniqueItems: true
+              description: 'Exaustive combination of array of user roles ["teacher", "student", "admin", "sensor"]'
+              items:
+                type: string
+                enum:
+                  - teacher
+                  - student
+                  - admin
+                  - sensor
+                description: 'Each role must be one of "teacher", "student", "admin", or "sensor".'
+            status:
+              type: string
+              enum:
+                - active
+                - inactive
+              description: 'Status must be either "active" or "inactive".'
+            createdAt:
+              type: string
+              format: date-time
+              readOnly: true
+              description: "Date when the user was created."
+            updatedAt:
+              type: string
+              format: date-time
+              readOnly: true
+              description: "Date when the user was last updated."
+            passwordChangedAt:
+              type: string
+              format: date-time
+              readOnly: true
+              description: "Date when the user's password was last updated."
+            lastLoggedInAt:
+              type: string
+              format: date-time
+              readOnly: true
+              description: "Date when the user last logged in."
     NewUser:
       allOf:
         - $ref: "#/components/schemas/User"
@@ -551,7 +569,7 @@ components:
       required:
         - currentPassword
         - newPassword
-        - confirmPassword
+        - confirmNewPassword
       properties:
         currentPassword:
           $ref: "#/components/schemas/Password"
@@ -600,6 +618,16 @@ components:
         path:
           type: string
   requestBodies:
+    updateAccountInput:
+      description: Update user account details
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Account"
+        application/x-www-form-urlencoded:
+          schema:
+            $ref: "#/components/schemas/Account"
     updateUserRolesInput:
       description: Update user roles
       required: true
